fixed rating spacing

--- a/client/src/components/TacoLog/TacoVeiw.css
+++ b/client/src/components/TacoLog/TacoVeiw.css
@@ -26,6 +26,7 @@ form {
 
 .rating {
   width: 119px;
+  margin-bottom: 1rem;
 }
 
 .ratings {
@@ -214,4 +215,12 @@ span {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+
+
+
+
+.fa {
+  display: none;
 }
